# teamerPD

./: Cargo.toml  Dockerfile-final  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: main.yml
resources/: index.html
resources/css/: about.css  colors.css  emailverified.css  login.css  main.css  my_team.css  one_user.css  profile.css  teams.css  users.css
resources/js/: addCookie.js  deleteCookie.js  emailverified.js  login.js  main.js  my_team.js  new_team.js  pieces.js  profile.js  sendRequest.js  teams.js  throwError.js  users.js
resources/templates/: about.html.tera  advice-team.html  create_team.html.tera  emailverified.html  index.html  login.html  main.html  main.html.tera  my_teams.html.tera  one_user.html.tera  profile.html  profile.html.tera  team.html  teams.html  teams.html.tera  users.html  users.html.tera
src/: lib.rs  main.rs
src/auth/: login_data.rs  mod.rs  registration_data.rs  validator.rs
src/auth/token/: mod.rs
src/crypto/: mod.rs
src/database/: dbinsert.rs  mod.rs  mongo.rs  new_user.rs  notification.rs  task.rs  team.rs  user.rs
src/mail/: mod.rs
src/prelude/: concat.rs  mod.rs  request.rs
src/routes/api/: helpers.rs  mod.rs  user.rs
src/routes/pages/: mod.rs
src/teams/: mod.rs
