[package]
name = "teamer"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.5.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
bcrypt = "0.10.1"
mongodb = "*"
jsonwebtoken = "*"
toml = "0.5.8"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]