[package]
name = "teamer"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true
name = "teamer_proc_macro"

[[bin]]
name = "teamer"

[dependencies]
#openssl = { version = "0.10", features = ["vendored"] }
rocket = "0.5.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
bcrypt = "0.10.1"
mongodb = "*"
jsonwebtoken = "*"
toml = "0.5.8"
lettre = "0.10.0-rc.4"
syn = { version =  "1.0.81", features = ["full"] }
quote = "*"
crypto-hash = "*"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]